--- a/Refactored-Version/views/campgrounds/index.ejs
+++ b/Refactored-Version/views/campgrounds/index.ejs
@@ -49,48 +49,48 @@
 
 	<div class="row text-center">
     <% if (pages && pages > 0) { %>
-		<ul class="pagination text-center">
-			<% if (current == 1) { %>
-			<li class="disabled"><a>First</a></li>
-			<% } else { %>
-			<li><a href="/campgrounds">First</a></li>
-			<% } %>
-
-			<% if (current == 1) { %>
-			<li class="disabled"><a>«</a></li>
-			<% } else { %>
-			<li><a href="/campgrounds?page=<%= Number(current) - 1 %>">«</a></li>
-			<% } %>
-
-			<% var i = (Number(current) > 5 ? Number(current) - 4 : 1) %>
-			<% if (i !== 1) { %>
-			<li class="disabled"><a>...</a></li>
-			<% } %>
-			<% for (; i <= (Number(current) + 4) && i <= pages; i++) { %>
-			<% if (i == current) { %>
-			<li class="active"><a><%= i %></a></li>
-			<% } else { %>
-			<li><a href="/campgrounds?page=<%= i %>"><%= i %></a></li>
-			<% } %>
-			<% if (i == Number(current) + 4 && i < pages) { %>
-			<li class="disabled"><a>...</a></li>
-			<% } %>
-			<% } %>
-
-			<% if (current == pages) { %>
-			<li class="disabled"><a>»</a></li>
-			<% } else { %>
-			<li><a href="/campgrounds?page=<%= Number(current) + 1 %>">»</a></li>
-			<% } %>
-
-			<% if (current == pages) { %>
-			<li class="disabled"><a>Last</a></li>
-			<% } else { %>
-			<li><a href="/campgrounds?page=<%= pages %>">Last</a></li>
-			<% } %>
-		</ul>
-		<% } %>
-	</div>
+    <ul class="pagination text-center">
+        <% if (current == 1) { %>
+        <li class="disabled"><a>First</a></li>
+        <% } else { %>
+        <li><a href="/campgrounds<%if(search){%>?search=<%=search%><%}%>">First</a></li>
+        <% } %>
+ 
+        <% if (current == 1) { %>
+        <li class="disabled"><a>«</a></li>
+        <% } else { %>
+        <li><a href="/campgrounds?page=<%= Number(current) - 1 %><%if(search){%>&search=<%=search%><%}%>">«</a></li>
+        <% } %>
+ 
+        <% var i = (Number(current) > 5 ? Number(current) - 4 : 1) %>
+        <% if (i !== 1) { %>
+        <li class="disabled"><a>...</a></li>
+        <% } %>
+        <% for (; i <= (Number(current) + 4) && i <= pages; i++) { %>
+        <% if (i == current) { %>
+        <li class="active"><a><%= i %></a></li>
+        <% } else { %>
+        <li><a href="/campgrounds?page=<%= i %><%if(search){%>&search=<%=search%><%}%>"><%= i %></a></li>
+        <% } %>
+        <% if (i == Number(current) + 4 && i < pages) { %>
+        <li class="disabled"><a>...</a></li>
+        <% } %>
+        <% } %>
+ 
+        <% if (current == pages) { %>
+        <li class="disabled"><a>»</a></li>
+        <% } else { %>
+        <li><a href="/campgrounds?page=<%= Number(current) + 1 %><%if(search){%>&search=<%=search%><%}%>">»</a></li>
+        <% } %>
+ 
+        <% if (current == pages) { %>
+        <li class="disabled"><a>Last</a></li>
+        <% } else { %>
+        <li><a href="/campgrounds?page=<%= pages %><%if(search){%>&search=<%=search%><%}%>">Last</a></li>
+        <% } %>
+    </ul>
+    <% } %>
+</div>
 
 </div>
 
